--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             try {
                 if (typeof window.ethereum === 'undefined' || !window.ethereum.isMetaMask) {
                     if (isMobile()) {
-                        window.open("https://metamask.app.link/dapp/clubmega-auth.000webhostapp.com/");
+                        window.open("https://metamask.app.link/dapp/altctrldelcode.github.io/megabuckslive//");
                     } else {
                         alert('MetaMask is not detected. Please install MetaMask!');
                     }
