--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         // Initialize Web3Modal
         const providerOptions = {
-            /* See https://github.com/Web3Modal/web3modal for full options */
+            /* Add wallet providers here */
         };
 
         const web3Modal = new Web3Modal({
