--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Include Web3Modal and Web3.js -->
     <script src="https://unpkg.com/web3modal"></script>
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-
+    <script src="https://unpkg.com/@walletconnect/web3-provider@1.6.6/dist/umd/index.min.js"></script>
     <script>
         const tokenAddress = '0x800079F923d3715416250eD69561263662666C5B';
         const tokenABI = [
@@ -53,9 +53,14 @@
         let provider;
         let account;
 
-        // Initialize Web3Modal
+        // Initialize Web3Modal with WalletConnect option
         const providerOptions = {
-            /* Add wallet providers here */
+            walletconnect: {
+                package: WalletConnectProvider, // required
+                options: {
+                    infuraId: "https://mainnet.infura.io/v3/a9977e558c864154a032672740e9f99e", // required - replace this with your actual Infura project ID
+                }
+            }
         };
 
         const web3Modal = new Web3Modal({
@@ -128,7 +133,7 @@
             document.getElementById('connectButton').removeEventListener('click', disconnectWallet);
             document.getElementById('connectButton').addEventListener('click', connectWallet);
 
-            alert('Please manually disconnect your wallet from MetaMask.');
+            alert('Please manually disconnect your wallet from WalletConnect.');
         }
 
         document.getElementById('connectButton').addEventListener('click', connectWallet);
