--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             walletconnect: {
                 package: WalletConnectProvider, // required
                 options: {
-                    infuraId: "https://mainnet.infura.io/v3/a9977e558c864154a032672740e9f99e", // required - replace this with your actual Infura project ID
+                    infuraId: "a9977e558c864154a032672740e9f99e", // required - replace this with your actual Infura project ID
                 }
             }
         };
