--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
         </p>
     </div>
 
-    <!-- Include Web3.js and WalletConnect provider -->
-    <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.6.6/dist/umd/index.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
     <script>
         const tokenAddress = '0x800079F923d3715416250eD69561263662666C5B';
         const tokenABI = [
@@ -49,22 +47,27 @@
         ];
 
         let web3;
-        let provider;
         let account;
 
-        async function connectWallet() {
-            try {
-                // Initialize WalletConnect Provider with Alchemy
-                provider = new WalletConnectProvider.default({
-                    rpc: {
-                        1: "https://eth-mainnet.g.alchemy.com/v2/n_jUtVzJge2fGPEmIwUG9diZbxbULmPk" // Alchemy API key
-                    }
-                });
+        function isMobile() {
+            return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+        }
 
-                // Enable session (triggers QR Code modal)
-                await provider.enable();
-                
-                web3 = new Web3(provider);
+        async function connectWallet() {
+            /*try {
+                if (typeof window.ethereum === 'undefined' || !window.ethereum.isMetaMask) {
+                    if (isMobile()) {
+                        window.open("https://metamask.app.link/dapp/clubmega-auth.000webhostapp.com/");
+                    } else {
+                        alert('MetaMask is not detected. Please install MetaMask!');
+                    }
+                    return;
+                }*/
+
+                web3 = new Web3(window.ethereum);
+                console.log('MetaMask is installed!');
+
+                await ethereum.request({ method: 'eth_requestAccounts' });
 
                 const accounts = await web3.eth.getAccounts();
                 account = accounts[0];
@@ -81,43 +84,19 @@
                 tokenContract.methods.balanceOf(account).call()
                     .then(balance => {
                         const tokenBalance = web3.utils.fromWei(balance, 'ether');
-                        document.getElementById('tokenBalance').innerHTML = `MegaBucks Balance: ${tokenBalance} MBK`;
+                        document.getElementById('tokenBalance').innerHTML = `${tokenBalance} MBK`;
                     })
                     .catch(error => {
-                        console.error('Error fetching balance:', error);
+                        console.error(error);
                         document.getElementById('tokenBalance').innerHTML = 'MegaBucks Balance: Error fetching balance';
                     });
-
-                // Subscribe to accounts change
-                provider.on("accountsChanged", (accounts) => {
-                    account = accounts[0];
-                    document.getElementById('walletAddress').innerText = `Wallet Address: ${account}`;
-                });
-
-                // Subscribe to chainId change
-                provider.on("chainChanged", (chainId) => {
-                    // Handle the new chain.
-                    // Correctly handling chain changes can be complicated, this is a basic example.
-                    window.location.reload();
-                });
-
-                // Subscribe to provider disconnection
-                provider.on("disconnect", (error) => {
-                    console.error('Disconnected:', error);
-                    disconnectWallet();
-                });
             } catch (error) {
-                console.error('Error connecting to wallet:', error);
+                console.error('Error connecting to MetaMask:', error);
             }
         }
 
         function disconnectWallet() {
-            if (provider.close) {
-                provider.close();
-            }
-            provider = null;
             account = null;
-
             document.getElementById('walletAddress').innerText = 'Wallet Address: Not connected';
             document.getElementById('tokenBalance').innerHTML = 'MegaBucks Balance: N/A';
             document.getElementById('connectButton').innerText = 'Connect your wallet';
@@ -126,9 +105,24 @@
             document.getElementById('connectButton').removeEventListener('click', disconnectWallet);
             document.getElementById('connectButton').addEventListener('click', connectWallet);
 
-            alert('Please manually disconnect your wallet from WalletConnect.');
+            // Notify the user to manually disconnect from MetaMask
+            alert('Please manually disconnect your wallet from MetaMask.');
         }
 
+        async function setupWeb3() {
+            if (typeof window.ethereum !== 'undefined' && window.ethereum.isMetaMask) {
+                web3 = new Web3(window.ethereum);
+                console.log('MetaMask is installed!');
+            } else {
+                if (isMobile()) {
+                    window.open("https://metamask.app.link/dapp/clubmega-auth.000webhostapp.com/");
+                } else {
+                    alert('MetaMask is not detected. Please install MetaMask!');
+                }
+            }
+        }
+
+        document.addEventListener('DOMContentLoaded', setupWeb3);
         document.getElementById('connectButton').addEventListener('click', connectWallet);
     </script>
 </body>
