--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                         console.error(error);
                         document.getElementById('tokenBalance').innerHTML = 'MegaBucks Balance: Error fetching balance';
                     });
-            } catch (error) {
+            /*} catch (error) {
                 console.error('Error connecting to MetaMask:', error);
-            }
+            }*/
         }
 
         function disconnectWallet() {
