--- a/index.html
+++ b/index.html
@@ -33,38 +33,45 @@
         </p>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.6.0/web3.min.js"></script>
-    <script src="https://unpkg.com/@thirdweb-dev/sdk@latest/dist/browser.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
     <script>
-        const clientId = '96c59ec9741948dc153e675e94280676'; /*CLIENT_ID*/
         const tokenAddress = '0x800079F923d3715416250eD69561263662666C5B';
+        const tokenABI = [
+            {
+                "constant": true,
+                "inputs": [{"name": "_owner", "type": "address"}],
+                "name": "balanceOf",
+                "outputs": [{"name": "balance", "type": "uint256"}],
+                "type": "function"
+            }
+        ];
 
-        let sdk;
-        let contract;
-        let provider;
+        let web3;
         let account;
 
-        async function setupThirdweb() {
-            sdk = thirdweb.createThirdwebClient({
-                clientId: clientId
-            });
-
-            contract = sdk.getContract({
-                client: sdk,
-                chain: thirdweb.defineChain(1), // 1 is for Ethereum mainnet
-                address: tokenAddress
-            });
-
-            provider = sdk.provider;
+        function isMobile() {
+            return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
         }
 
         async function connectWallet() {
-            try {
-                await setupThirdweb();
-                
-                const walletConnection = await sdk.wallet.connect("walletconnect");
+            /*try {
+                if (typeof window.ethereum === 'undefined' || !window.ethereum.isMetaMask) {
+                    if (isMobile()) {
+                        window.open("https://metamask.app.link/dapp/clubmega-auth.000webhostapp.com/");
+                    } else {
+                        alert('MetaMask is not detected. Please install MetaMask!');
+                    }
+                    return;
+                }*/
 
-                account = walletConnection.address;
+                web3 = new Web3(window.ethereum);
+                console.log('MetaMask is installed!');
+
+                await ethereum.request({ method: 'eth_requestAccounts' });
+
+                const accounts = await web3.eth.getAccounts();
+                account = accounts[0];
+
                 document.getElementById('walletAddress').innerText = `Wallet Address: ${account}`;
                 document.getElementById('connectButton').innerText = 'Disconnect';
                 document.getElementById('connectButton').classList.remove('btn-blue');
@@ -72,18 +79,23 @@
                 document.getElementById('connectButton').removeEventListener('click', connectWallet);
                 document.getElementById('connectButton').addEventListener('click', disconnectWallet);
 
-                const balance = await contract.read("balanceOf", account);
-                const tokenBalance = web3.utils.fromWei(balance, 'ether');
-                document.getElementById('tokenBalance').innerHTML = `${tokenBalance} MBK`;
-            } catch (error) {
-                console.error('Error connecting to WalletConnect:', error);
-            }
+                const tokenContract = new web3.eth.Contract(tokenABI, tokenAddress);
+
+                tokenContract.methods.balanceOf(account).call()
+                    .then(balance => {
+                        const tokenBalance = web3.utils.fromWei(balance, 'ether');
+                        document.getElementById('tokenBalance').innerHTML = `${tokenBalance} MBK`;
+                    })
+                    .catch(error => {
+                        console.error(error);
+                        document.getElementById('tokenBalance').innerHTML = 'MegaBucks Balance: Error fetching balance';
+                    });
+            /*} catch (error) {
+                console.error('Error connecting to MetaMask:', error);
+            }*/
         }
 
         function disconnectWallet() {
-            if (sdk && sdk.wallet) {
-                sdk.wallet.disconnect();
-            }
             account = null;
             document.getElementById('walletAddress').innerText = 'Wallet Address: Not connected';
             document.getElementById('tokenBalance').innerHTML = 'MegaBucks Balance: N/A';
@@ -93,10 +105,24 @@
             document.getElementById('connectButton').removeEventListener('click', disconnectWallet);
             document.getElementById('connectButton').addEventListener('click', connectWallet);
 
-            alert('Please manually disconnect your wallet from WalletConnect.');
+            // Notify the user to manually disconnect from MetaMask
+            alert('Please manually disconnect your wallet from MetaMask.');
         }
 
-        document.addEventListener('DOMContentLoaded', setupThirdweb);
+        async function setupWeb3() {
+            if (typeof window.ethereum !== 'undefined' && window.ethereum.isMetaMask) {
+                web3 = new Web3(window.ethereum);
+                console.log('MetaMask is installed!');
+            } else {
+                if (isMobile()) {
+                    window.open("https://metamask.app.link/dapp/clubmega-auth.000webhostapp.com/");
+                } else {
+                    alert('MetaMask is not detected. Please install MetaMask!');
+                }
+            }
+        }
+
+        document.addEventListener('DOMContentLoaded', setupWeb3);
         document.getElementById('connectButton').addEventListener('click', connectWallet);
     </script>
 </body>
